--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,36 @@ dmypy.json
 07-homework/sources/Texas-licfile.csv
 07-homework/sources/Texas-violations.csv
 07-homework/sources/raw/licfile.csv
+12-homework/sources/_compressed/nyc_mappluto_18v2_1_shp.zip
+12-homework/sources/_compressed/NYS-Tax-Parcels-SHP.zip
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.cpg
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.dbf
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.prj
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.sbn
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.sbx
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.shp
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.shp.xml
+12-homework/sources/NYC_mappluto_18v2_1_shp/MapPLUTO.shx
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/PlutoReadme18v2.1.pdf
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/PLUTODD18v2.1.pdf
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.shx
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.shp.xml
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.shp
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.sbx
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.sbn
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.prj
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.dbf
+12-homework/sources/NYC_mappluto_18v2_1_unclippedWater_shp/MapPLUTO_UNCLIPPED.CPG
+12-homework/sources/NYCopenData_shapefiles_and_baseMap/geo_export_772a5d9d-fad3-4ac0-962f-2c4a988ada9e.shp
+12-homework/sources/NYCopenData_shapefiles_and_baseMap/geo_export_772a5d9d-fad3-4ac0-962f-2c4a988ada9e.shx
+12-homework/sources/NYCopenData_shapefiles_and_baseMap/geo_export_772a5d9d-fad3-4ac0-962f-2c4a988ada9e.prj
+12-homework/sources/NYCopenData_shapefiles_and_baseMap_building0316.csv
+12-homework/sources/NYCopenData_shapefiles_and_baseMap/geo_export_772a5d9d-fad3-4ac0-962f-2c4a988ada9e.dbf
+12-homework/sources/NYCneighborhood_names_GIS/geo_export_d7777218-1d1d-4cfa-95b6-5b0ac97a8faf.shx
+12-homework/sources/NYCneighborhood_names_GIS/geo_export_d7777218-1d1d-4cfa-95b6-5b0ac97a8faf.shp
+12-homework/sources/NYCneighborhood_names_GIS/geo_export_d7777218-1d1d-4cfa-95b6-5b0ac97a8faf.prj
+12-homework/sources/NYCneighborhood_names_GIS/geo_export_d7777218-1d1d-4cfa-95b6-5b0ac97a8faf.dbf
+12-homework/sources/_compressed/nyc_mappluto_18v2_1_unclippedWater_shp.zip
+12-homework/sources/_compressed/NYCopenData_shapefiles_and_baseMap.zip
+12-homework/sources/NYC_pluto_18v2_1_csv/pluto_18v2_1.csv
+12-homework/sources/NYS-Tax-Parcels-SHP/NYC_2017_Tax_Parcels_SHP_1808.zip
